styles(rating): fixing button view and dark mode

--- a/src/app/pages/tabs/stories/story-details/story-details.page.scss
+++ b/src/app/pages/tabs/stories/story-details/story-details.page.scss
@@ -1,5 +1,5 @@
 ion-content {
-  transform: translate3d(0, 180px, 0);
+  transform: translate3d(0, 140px, 0);
     -bottom: 30px;
   --padding-end: 30px;
   --padding-start: 30px;
