--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -127,13 +127,13 @@
     --ion-color-danger-contrast-rgb: 255, 255, 255;
     --ion-color-danger-shade: #e03030;
     --ion-color-danger-tint: #ff4a4a;
-  
-    --ion-color-dark: #222428;
-    --ion-color-dark-rgb: 34, 36, 40;
-    --ion-color-dark-contrast: #ffffff;
-    --ion-color-dark-contrast-rgb: 255, 255, 255;
-    --ion-color-dark-shade: #1e2023;
-    --ion-color-dark-tint: #383a3e;
+
+    --ion-color-dark: #f5f6ff;
+    --ion-color-dark-rgb: 245, 246, 255;
+    --ion-color-dark-contrast: #5468ff;
+    --ion-color-dark-contrast-rgb: 0, 0, 0;
+    --ion-color-dark-shade: #d8d8e0;
+    --ion-color-dark-tint: #f6f7ff;
   
     --ion-color-medium: #d6d9df;
     --ion-color-medium-rgb: 214, 217, 223;
